--- a/res/layout/layout_left_menu.xml
+++ b/res/layout/layout_left_menu.xml
@@ -43,17 +43,23 @@
                     android:orientation="vertical" >
 
                     <TextView
+                        android:id="@+id/tv_user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="头像"
-                        android:textSize="17.6sp" />
+                        android:textSize="17.6sp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center_vertical"
+                         />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
-                        android:orientation="horizontal" >
+                        android:orientation="horizontal" 
+                        android:visibility="gone"
+                         >
 
                         <ImageView
                             android:layout_width="12dp"
