--- a/res/layout/card_details_activity.xml
+++ b/res/layout/card_details_activity.xml
@@ -52,8 +52,8 @@
         <RelativeLayout
             android:id="@+id/btn_cancel_layout"
             android:layout_width="55dp"
-            android:layout_alignParentRight="true"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical" >
 
             <TextView
@@ -261,7 +261,7 @@
                             android:id="@+id/tv_zan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/icon_main_item_zan"
+                            android:drawableLeft="@drawable/common_icon_like"
                             android:drawablePadding="5dp"
                             android:gravity="center"
                             android:text="0"
@@ -273,7 +273,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:layout_marginLeft="25dp"
-                            android:drawableLeft="@drawable/icon_main_item_share"
+                            android:drawableLeft="@drawable/common_icon_share"
                             android:drawablePadding="5dp"
                             android:textColor="#676767" />
                     </LinearLayout>
@@ -289,10 +289,82 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
                     android:background="#e1e1e1" />
+
+                <!-- 秘书接单UI -->
+
+                <RelativeLayout
+                    android:id="@+id/sec_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp" >
+
+                    <ImageView
+                        android:id="@+id/sec_icon"
+                        android:layout_width="@dimen/card_icon_size"
+                        android:layout_height="@dimen/card_icon_size"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/ic_launcher" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toRightOf="@id/sec_icon"
+                        android:orientation="vertical" >
+
+                        <TextView
+                            android:id="@+id/sec_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="标题" />
+
+                        <TextView
+                            android:id="@+id/sec_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="购买秘书期限与类型" />
+                    </LinearLayout>
+
+                    <FrameLayout
+                        android:id="@+id/fl_sec_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="10dp" >
+
+                        <Button
+                            android:id="@+id/sec_btn_accept"
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:background="@drawable/login_btn_bg_selector"
+                            android:gravity="center"
+                            android:text="接单"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/font_size_16" />
+                        <Button
+                            android:id="@+id/sec_btn_complete"
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:background="@drawable/login_btn_bg_selector"
+                            android:gravity="center"
+                            android:text="完成"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/font_size_16" />
+                    </FrameLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_below="@id/fl_sec_btn"
+                        android:layout_marginTop="10dp"
+                        android:background="#e1e1e1" />
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/layout_dianzan"
