--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -166,4 +166,20 @@
         android:orientation="vertical" >
     </LinearLayout>
 
+      <View
+        android:id="@+id/layout_mask"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#a2000000"
+        android:visibility="gone" />
+
+    <View
+        android:id="@+id/layout_guide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:background="@drawable/guide" 
+        android:visibility="gone"
+        />
+    
 </RelativeLayout>
