--- a/res/layout/card_details_activity.xml
+++ b/res/layout/card_details_activity.xml
@@ -300,13 +300,18 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp" >
 
-                    <ImageView
+                    <com.meijialife.simi.ui.RoundImageView
                         android:id="@+id/sec_icon"
                         android:layout_width="@dimen/card_icon_size"
                         android:layout_height="@dimen/card_icon_size"
-                        android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/ic_launcher" />
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/ic_launcher"
+                        android:src="@drawable/ic_defult_touxiang"
+                        imagecontrol:border_inside_color="@color/simi_color_white"
+                        imagecontrol:border_outside_color="@color/simi_color_white"
+                        imagecontrol:border_thickness_in="1dp"
+                        imagecontrol:border_thickness_out="1dp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -347,6 +352,7 @@
                             android:text="接单"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/font_size_16" />
+
                         <Button
                             android:id="@+id/sec_btn_complete"
                             android:layout_width="wrap_content"
