--- a/res/layout/discount_card_activity.xml
+++ b/res/layout/discount_card_activity.xml
@@ -55,7 +55,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="3dp"
-                        android:src="@drawable/ic_launcher" />
+                        android:src="@drawable/iconfont_sousuo" />
 
                     <EditText
                         android:layout_width="match_parent"
