--- a/res/layout/my_order_list_item.xml
+++ b/res/layout/my_order_list_item.xml
@@ -16,9 +16,9 @@
 
         <ImageView
             android:id="@+id/item_iv_icon"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:background="@drawable/ic_launcher" 
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/iconfont_f" 
             android:layout_centerVertical="true"/>
 
         <LinearLayout
