--- a/res/layout/my_wallet_activity.xml
+++ b/res/layout/my_wallet_activity.xml
@@ -35,9 +35,9 @@
                     android:textColor="@color/simi_color_white" />
 
                 <TextView
+                    android:id="@+id/tv_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1315.00"
                     android:textColor="@color/simi_color_white" />
             </LinearLayout>
 
