--- a/res/layout/layout_main_plus_affair.xml
+++ b/res/layout/layout_main_plus_affair.xml
@@ -30,6 +30,44 @@
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp" >
+                              <RelativeLayout
+                    android:id="@+id/layout_select_who"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp" >
+
+                    <TextView
+                        android:id="@+id/tv_who_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="给谁创建:"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_select_who_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@id/tv_who_title"
+                        android:textColor="#a4a4a4" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignTop="@id/tv_select_who_name"
+                        android:drawablePadding="5dp"
+                        android:drawableRight="@drawable/icon_plus_arrowright"
+                        android:textColor="@color/red_text_color" />
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="#e1e1e1" />
 
                 <RelativeLayout
                     android:id="@+id/layout_select_phonenumber"
@@ -314,6 +352,19 @@
                         android:layout_marginRight="3dp" />
                 </RelativeLayout>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_senser_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/layout_view3"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="提示：秘书工作时间为7:00~19:00，请在此时间内设置秘书提醒时间"
+                android:textColor="@color/simi_color_red"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/layout_view4"
