--- a/res/layout/layout_main_plus_trevel.xml
+++ b/res/layout/layout_main_plus_trevel.xml
@@ -23,13 +23,48 @@
             <LinearLayout
                 android:id="@+id/layout_view1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:background="@android:color/white"
                 android:orientation="horizontal"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingTop="10dp" >
+                android:gravity="center_vertical"
+                android:paddingRight="16dp" >
+
+                <RelativeLayout
+                    android:id="@+id/layout_select_who"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/tv_who_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="给谁创建:"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_select_who_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@id/tv_who_title"
+                        android:textColor="#a4a4a4" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignTop="@id/tv_select_who_name"
+                        android:drawablePadding="5dp"
+                        android:drawableRight="@drawable/icon_plus_arrowright"
+                        android:textColor="@color/red_text_color" />
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#e1e1e1" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -262,9 +297,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
+                        android:layout_toLeftOf="@id/iv_arrow"
                         android:maxWidth="150dp"
                         android:singleLine="true"
-                        android:layout_toLeftOf="@id/iv_arrow"
                         android:textColor="@color/red_text_color" />
                 </RelativeLayout>
 
@@ -401,6 +436,19 @@
                         android:layout_centerVertical="true" />
                 </RelativeLayout>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_senser_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/layout_view3"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="提示：秘书工作时间为7:00~19:00，请在此时间内设置秘书提醒时间"
+                android:textColor="@color/simi_color_red"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/layout_view4"
