--- a/res/layout/my_order_list_item.xml
+++ b/res/layout/my_order_list_item.xml
@@ -18,7 +18,7 @@
             android:id="@+id/item_iv_icon"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:background="@drawable/iconfont_f" 
+            android:background="@drawable/order_icon"
             android:layout_centerVertical="true"/>
 
         <LinearLayout
