--- a/res/layout/order_details_activity.xml
+++ b/res/layout/order_details_activity.xml
@@ -48,7 +48,7 @@
                     android:layout_width="52dp"
                     android:layout_height="52dp"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/iconfont_f" />
+                    android:background="@drawable/order_icon" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
