--- a/res/layout/index_4.xml
+++ b/res/layout/index_4.xml
@@ -215,7 +215,7 @@
                     android:gravity="center"
                     android:text="我发布的"
                     android:textColor="@drawable/personpage_tab_selector"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/my_publish_text_size" />
 
                 <View
                     android:layout_width="1dp"
@@ -232,7 +232,7 @@
                     android:gravity="center"
                     android:text="我参与的"
                     android:textColor="@drawable/personpage_tab_selector"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/my_publish_text_size" />
             </LinearLayout>
 
             <View
