--- a/res/layout/card_details_activity.xml
+++ b/res/layout/card_details_activity.xml
@@ -48,13 +48,30 @@
             android:focusable="true"
             android:scaleType="centerInside"
             android:visibility="gone" />
+		
+         <RelativeLayout
+            android:id="@+id/btn_edit_layout"
+            android:layout_width="55dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentRight="true" >
 
+            <TextView
+                android:id="@+id/tv_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="编辑"
+                android:textColor="@color/simi_color_red"
+                android:textSize="15sp" />
+        </RelativeLayout>
         <RelativeLayout
             android:id="@+id/btn_cancel_layout"
             android:layout_width="55dp"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="center_vertical" >
+            android:layout_gravity="center_vertical"
+            android:layout_toLeftOf="@id/btn_edit_layout"
+             >
 
             <TextView
                 android:id="@+id/tv_cancel"
@@ -66,22 +83,7 @@
                 android:textSize="15sp" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/btn_edit_layout"
-            android:layout_width="55dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_toLeftOf="@id/btn_cancel_layout" >
-
-            <TextView
-                android:id="@+id/tv_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="编辑"
-                android:textColor="@color/simi_color_red"
-                android:textSize="15sp" />
-        </RelativeLayout>
+       
     </RelativeLayout>
 
     <RelativeLayout
@@ -151,7 +153,9 @@
                         android:id="@+id/iv_icon"
                         android:layout_width="@dimen/card_icon_size"
                         android:layout_height="@dimen/card_icon_size"
-                        android:layout_centerVertical="true" />
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/card_icon_margin_left"
+                         />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -164,7 +168,9 @@
                         <TextView
                             android:id="@+id/tv_title"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content" 
+                            android:textColor="@color/black"
+                            />
                     </LinearLayout>
 
                     <RelativeLayout
@@ -242,7 +248,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:textColor="#8a8989" />
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
                 <RelativeLayout
