--- a/res/layout/item_home_cardlist.xml
+++ b/res/layout/item_home_cardlist.xml
@@ -24,7 +24,9 @@
             android:layout_width="@dimen/card_icon_size"
             android:layout_height="@dimen/card_icon_size"
             android:layout_centerVertical="true"
-            android:background="@drawable/icon_main_item_chifan" />
+            android:background="@drawable/icon_main_item_chifan" 
+            android:layout_marginLeft="@dimen/card_icon_margin_left"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -46,7 +48,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="刚刚 "
-                android:textColor="#a4a4a4" />
+                android:textColor="#a4a4a4"
+                android:textSize="@dimen/card_time_tip"
+                 />
         </LinearLayout>
 
         <RelativeLayout
