--- a/res/layout/layout_friend_top_tab.xml
+++ b/res/layout/layout_friend_top_tab.xml
@@ -19,7 +19,14 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="horizontal" >
-
+             <RadioButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:text="好友"
+                android:textColor="@color/index2_radiobutton_color" />
             <RadioButton
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -27,15 +34,6 @@
                 android:button="@null"
                 android:gravity="center"
                 android:text="消息"
-                android:textColor="@color/index2_radiobutton_color" />
-
-            <RadioButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:button="@null"
-                android:gravity="center"
-                android:text="秘友"
                 android:textColor="@color/index2_radiobutton_color" />
         </RadioGroup>
 
