--- a/res/layout/friend_page_activity.xml
+++ b/res/layout/friend_page_activity.xml
@@ -48,7 +48,14 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
                         android:visibility="visible" >
-
+					  
+                        <LinearLayout
+                            android:id="@+id/tv_name_and_sex"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="5dp"
+                            android:orientation="horizontal" >
                         <TextView
                             android:id="@+id/tv_top_nickname"
                             android:layout_width="wrap_content"
@@ -58,11 +65,31 @@
                             android:text="Ketch"
                             android:textColor="#ffffff"
                             android:textSize="18sp" />
-							
+						 <ImageView
+				            android:id="@+id/iv_icon_sex"
+				            android:layout_width="10dp"
+				            android:layout_height="10dp"
+				            android:background="@drawable/friend_sex_female" 
+				            android:layout_marginTop="7dp"
+				            android:layout_marginLeft="10dp"
+				            android:padding="3dp"
+				            />	
+				           <ImageView
+				            android:id="@+id/iv_icon_level"
+				            android:layout_width="17dp"
+				            android:layout_height="10dp"
+				            android:background="@drawable/friend_level" 
+				            android:layout_marginTop="7dp"
+				            android:layout_marginLeft="10dp"
+				            android:paddingBottom="3dp"
+                            android:paddingTop="3dp"
+                            android:text="Lv1"
+				            />	
+                        </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/tv_top_nickname"
+                            android:layout_below="@id/tv_name_and_sex"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="5dp"
                             android:orientation="horizontal" >
