--- a/res/layout/friend_page_activity.xml
+++ b/res/layout/friend_page_activity.xml
@@ -49,7 +49,7 @@
                         android:layout_marginTop="15dp"
                         android:visibility="visible" >
 					  
-                        <LinearLayout
+                       <LinearLayout
                             android:id="@+id/tv_name_and_sex"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -74,17 +74,21 @@
 				            android:layout_marginLeft="10dp"
 				            android:padding="3dp"
 				            />	
-				           <ImageView
-				            android:id="@+id/iv_icon_level"
-				            android:layout_width="17dp"
-				            android:layout_height="10dp"
-				            android:background="@drawable/friend_level" 
-				            android:layout_marginTop="7dp"
-				            android:layout_marginLeft="10dp"
-				            android:paddingBottom="3dp"
-                            android:paddingTop="3dp"
-                            android:text="Lv1"
-				            />	
+				            
+						 <TextView
+                                android:id="@+id/iv_icon_level"
+                                android:layout_width="23dp"
+				          		android:layout_height="13dp"
+                                android:background="@drawable/friend_level" 
+                                android:gravity="center"
+                           		android:layout_marginTop="0dp"
+                           		android:layout_marginLeft="13dp"
+                           		android:layout_marginBottom="10dp"
+                                android:text="Lv1"
+                                android:textColor="#ffffff"
+                                android:textSize="10sp"
+                                android:textStyle="bold"
+                                 />
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
