# Conflicts: #	res/layout/layout_friend_top_tab.xml #	src/com/meijialife/simi/MainActivity.java

--- a/res/layout/layout_friend_top_tab.xml
+++ b/res/layout/layout_friend_top_tab.xml
@@ -19,14 +19,16 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="horizontal" >
-             <RadioButton
+
+            <RadioButton
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:button="@null"
                 android:gravity="center"
-                android:text="好友"
+                android:text="秘友"
                 android:textColor="@color/index2_radiobutton_color" />
+
             <RadioButton
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
