--- a/res/layout/layout_main_plus_trevel.xml
+++ b/res/layout/layout_main_plus_trevel.xml
@@ -49,8 +49,10 @@
                         android:id="@+id/tv_select_who_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
                         android:layout_marginLeft="5dp"
                         android:layout_toRightOf="@id/tv_who_title"
+                        android:gravity="center_vertical"
                         android:textColor="#a4a4a4" />
 
                     <TextView
