--- a/res/layout/layout_main_plus_trevel.xml
+++ b/res/layout/layout_main_plus_trevel.xml
@@ -34,8 +34,7 @@
                 <RelativeLayout
                     android:id="@+id/layout_select_who"
                     android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:layout_marginBottom="10dp" >
+                    android:layout_height="42dp" >
 
                     <TextView
                         android:id="@+id/tv_who_title"
@@ -76,6 +75,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal" >
 
                     <LinearLayout
