--- a/res/layout/index_4.xml
+++ b/res/layout/index_4.xml
@@ -73,8 +73,8 @@
                                 android:id="@+id/tv_distance"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="9dp"
                                 android:layout_marginLeft="5dp"
+                                android:layout_marginTop="9dp"
                                 android:singleLine="true"
                                 android:textColor="#ffffff"
                                 android:textSize="14sp" />
@@ -83,6 +83,7 @@
                 </RelativeLayout>
 
                 <!-- 隐藏消息按钮 2015-10-26 -->
+
                 <ImageButton
                     android:id="@+id/ibtn_message"
                     android:layout_width="wrap_content"
@@ -91,18 +92,18 @@
                     android:layout_alignParentTop="true"
                     android:background="@android:color/transparent"
                     android:padding="15dp"
-                    android:visibility="invisible"
-                    android:src="@drawable/icon_plus_duanxin" />
+                    android:src="@drawable/icon_plus_duanxin"
+                    android:visibility="invisible" />
 
                 <ImageButton
                     android:id="@+id/ibtn_person"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:background="@android:color/transparent"
-                    android:padding="15dp"
-                    android:src="@drawable/main_menu" />
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/main_menu" />
             </RelativeLayout>
 
             <LinearLayout
