--- a/res/layout/secretary_activity.xml
+++ b/res/layout/secretary_activity.xml
@@ -52,13 +52,38 @@
                 android:textColor="@color/simi_color_gray" />
         </LinearLayout>
 
-        <ImageButton
+        <!--
+             <ImageButton
             android:id="@+id/item_zan"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/icon_zan_red" />
+        -->
+    </RelativeLayout>
+    <!--
+    <ImageSwitcher  
+        android:id="@+id/imageSwitcher1"  
+        android:layout_width="wrap_content"  
+        android:layout_height="100dp">  
+    </ImageSwitcher>
+    -->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <LinearLayout
+            android:id="@+id/viewGroup"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+        </LinearLayout>
     </RelativeLayout>
 
     <ListView
