--- a/res/layout/secretary_list_item.xml
+++ b/res/layout/secretary_list_item.xml
@@ -8,13 +8,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_list_item_bg"
-        android:padding="8dp" >
+        android:background="@drawable/btn_list_item_bg" >
 
         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/item_iv_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_defult_touxiang"
             imagecontrol:border_inside_color="@color/simi_color_white"
@@ -23,27 +22,150 @@
             imagecontrol:border_thickness_out="1dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dp"
             android:layout_toRightOf="@id/item_iv_icon"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/item_tv_name"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/ll_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="张秘书" />
+                android:layout_centerVertical="true"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/item_tv_text"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/item_tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="张秘书"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/item_tv_office"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:text="会计"
+                    android:textColor="@color/simi_color_dark_gray" />
+
+                <TextView
+                    android:id="@+id/item_tv_fav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="工商代理人"
+                    android:textColor="@color/simi_color_dark_gray" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_addr"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:singleLine="true"
-                android:text="擅长文案编写，外语听说读写"
-                android:textColor="@color/simi_color_gray" />
+                android:layout_below="@id/ll_name"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/item_iv_icon"
+                android:orientation="horizontal" >
+
+                <LinearLayout
+                    android:id="@+id/sec_addr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/item_iv_addr_icon"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:padding="0.5dp"
+                        android:src="@drawable/icon_sec_addr" />
+
+                    <TextView
+                        android:id="@+id/item_tv_addr_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="北京-海淀区"
+                        android:textColor="@color/simi_color_dark_gray" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/sec_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="horizontal"
+                     >
+
+                    <ImageView
+                        android:id="@+id/item_iv_des_icon"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:padding="0.5dp"
+                        android:src="@drawable/icon_sec_time" />
+
+                    <TextView
+                        android:id="@+id/item_tv_des_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="下单10分钟内相应"
+                        android:textColor="@color/simi_color_dark_gray" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ll_addr"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/item_iv_icon"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tv_scope_items1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/lab_for_sec"
+                    android:gravity="center"
+                    android:text="服务业"
+                    android:textColor="@color/simi_color_white" />
+
+                <TextView
+                    android:id="@+id/tv_scope_item2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/lab_for_sec"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="互联网及信息"
+                    android:textColor="@color/simi_color_white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ll_addr"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="15dp"
+                android:layout_toRightOf="@id/item_iv_icon"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/item_tv_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="全市有四个分部，50多名专业人员，服务不满意，免部分费用"
+                    android:textSize="11sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 
