--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -7,6 +7,8 @@
     <color name="simi_color_red">#E8374A</color>
     <!-- 统一灰色 -->
     <color name="simi_color_gray">#676767</color>
+    <!--统一深灰-->
+    <color name="simi_color_dark_gray">#929292</color>
     <!-- 统一白色 -->
     <color name="simi_color_white">#FFFFFF</color>
     <!-- 统一黑色 -->
