--- a/res/layout/secretary_list_item.xml
+++ b/res/layout/secretary_list_item.xml
@@ -117,36 +117,17 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
+            <com.meijialife.simi.ui.AutoNextLineLinearlayout
+                android:id="@+id/ll_user_tags1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/ll_addr"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/item_iv_icon"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/tv_scope_items1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/lab_for_sec"
-                    android:gravity="center"
-                    android:text="服务业"
-                    android:textColor="@color/simi_color_white" />
-
-                <TextView
-                    android:id="@+id/tv_scope_item2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/lab_for_sec"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:text="互联网及信息"
-                    android:textColor="@color/simi_color_white" />
-            </LinearLayout>
+                android:orientation="horizontal"
+                android:layout_marginRight="10dp"
+                >
+            </com.meijialife.simi.ui.AutoNextLineLinearlayout>
+            
 
             <LinearLayout
                 android:layout_width="match_parent"
