--- a/res/layout/layout_friend.xml
+++ b/res/layout/layout_friend.xml
@@ -53,7 +53,9 @@
         android:layout_height="50dp"
         android:background="@drawable/btn_list_item_bg"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin" >
+        android:paddingRight="@dimen/activity_horizontal_margin" 
+        android:visibility="gone"
+        >
 
         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/iv_icon_2"
