--我的订单（详情修正）

--- a/res/layout/my_order_list_item.xml
+++ b/res/layout/my_order_list_item.xml
@@ -50,7 +50,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="已支付" />
+            android:text="已支付" 
+            android:clickable="false"
+            />
     </RelativeLayout>
 
 </LinearLayout>
