--- a/res/layout/order_details_activity.xml
+++ b/res/layout/order_details_activity.xml
@@ -92,6 +92,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin" >
 
                 <TextView
+                    android:id="@+id/tv_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -104,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:text="北京 - 上海 2015xxxxxx 航班号：CXJK600" />
+                    android:text="北京 -上海 2015xxxxxx 航班号：CXJK600" />
             </RelativeLayout>
 
             <RelativeLayout
