--- a/res/layout/secretary_activity.xml
+++ b/res/layout/secretary_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activity_bg_color"
-    android:orientation="vertical" >
+    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/com.meijialife.simi">
 
     <include
         android:id="@+id/view_title_bar"
@@ -33,7 +33,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"
+            android:layout_marginLeft="15dp"
             android:layout_toRightOf="@id/item_iv_icon"
             android:orientation="vertical" >
 
@@ -103,16 +103,12 @@
                     android:text="下单10分钟内响应"
                     android:textColor="@color/simi_color_dark_gray" />
             </LinearLayout>
-
-			<com.meijialife.simi.ui.AutoNextLineLinearlayout
-                android:id="@+id/ll_user_tags"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/item_iv_icon"
-                android:orientation="horizontal"
-                >
-            </com.meijialife.simi.ui.AutoNextLineLinearlayout>
+            <com.meijialife.simi.ui.TagGroup
+   				 android:id="@+id/ll_user_tags"
+   				 style="@style/TagGroup"
+   				 android:clickable="false"
+   				 android:focusable="false"
+   				  />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
