--- a/res/layout/secretary_list_item.xml
+++ b/res/layout/secretary_list_item.xml
@@ -116,19 +116,12 @@
                         android:textColor="@color/simi_color_dark_gray" />
                 </LinearLayout>
             </LinearLayout>
-
-            <com.meijialife.simi.ui.AutoNextLineLinearlayout
-                android:id="@+id/ll_user_tags1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/item_iv_icon"
-                android:orientation="horizontal"
-                android:layout_marginRight="10dp"
-                >
-            </com.meijialife.simi.ui.AutoNextLineLinearlayout>
-            
-
+          <com.meijialife.simi.ui.TagGroup
+			 android:id="@+id/ll_user_tags"
+			 style="@style/TagGroup"
+			 android:clickable="false"
+			 android:focusable="false"
+		  />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
