--- a/res/layout/discount_card_list_item.xml
+++ b/res/layout/discount_card_list_item.xml
@@ -54,7 +54,7 @@
                 android:textColor="#DA792C" />
 
             <TextView
-                android:id="@+id/item_tv_text"
+                android:id="@+id/item_tv_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
