--- a/res/layout/my_order_list_item.xml
+++ b/res/layout/my_order_list_item.xml
@@ -11,48 +11,117 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="18dp" >
-
-        <ImageView
-            android:id="@+id/item_iv_icon"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:background="@drawable/order_icon"
-            android:layout_centerVertical="true"/>
+        android:layout_height="fill_parent"
+        android:padding="10dp" >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/item_iv_icon"
+            android:layout_marginLeft="18dp"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/item_tv_name"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/item_iv_icon"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/order_icon" />
+
+                <TextView
+                    android:id="@+id/item_tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="服务名称:"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/item_tv_order_money"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="10dp"
+                    android:text="199元"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="服务名称" />
+                android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/item_tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="2014-11-11 08:00" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
 
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:padding="0.5dp"
+                        android:src="@drawable/icon_sec_time" />
+
+                    <TextView
+                        android:id="@+id/item_tv_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="2014-11-11 08:00" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:padding="0.5dp"
+                        android:src="@drawable/icon_sec_addr" />
+
+                    <TextView
+                        android:id="@+id/item_tv_order_addr"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="北京宇飞大厦612" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
+        <RelativeLayout
+            android:id="@+id/ll_order_status"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:layout_alignParentRight="true"
+            android:clickable="false"
+            >
         <TextView
             android:id="@+id/item_tv_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="已支付" 
+            android:layout_marginTop="10dp"
             android:clickable="false"
+            android:layout_alignParentRight="true"
+            android:text="已支付" 
+            android:gravity="right|center"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/btn_buy"
             />
+        </RelativeLayout>
     </RelativeLayout>
 
 </LinearLayout>
