--- a/res/layout/secreteary_service_list_item.xml
+++ b/res/layout/secreteary_service_list_item.xml
@@ -11,6 +11,7 @@
         android:padding="18dp" >
 
         <LinearLayout
+            android:id="@+id/ll_partner_service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
